--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "seed": "node scripts/seed.js"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.6",
     "axios": "^1.5.0",
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.1",
@@ -24,6 +25,7 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.1.3",
     "react-router-dom": "^6.16.0",
     "sequelize": "^6.33.0",
     "vite-express": "^0.10.0"
